Revert "Created Seperate Blog Page"

--- a/style.css
+++ b/style.css
@@ -23,13 +23,13 @@
 
 /* Customizing the button */
 .swal-button {
-  background-color: #053314 !important; /* Change button background color */
+  background-color:#053314 !important; /* Change button background color */
   color: #ffffff !important; /* Change button text color */
 }
 
 /* Customizing the button on hover */
 .swal-button:hover {
-  background-color: #0e4b16 !important; /* Change button hover background color */
+  background-color:#0e4b16 !important; /* Change button hover background color */
 }
 :root {
   --bg-color: #053314;
@@ -52,6 +52,7 @@ body::-webkit-scrollbar {
 }
 body {
   scrollbar-width: none;
+
 }
 section {
   min-height: 100vh;
@@ -72,7 +73,7 @@ section {
 .header.sticky {
   border-bottom: 0.1rem solid rgb(252, 187, 223);
 }
-.header img {
+.header img{
   height: 6rem;
   margin-right: 2rem;
 }
@@ -86,35 +87,40 @@ section {
 }
 .navbar a {
   font-size: 1.5vmax;
-}
-section {
-  min-height: 100vh;
-  padding: 10rem 9% 2rem;
-}
-.header {
-  position: fixed;
-  opacity: 0.8;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 2rem 9%;
-  background-color: var(--bg-color);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 100;
-}
-.header.sticky {
-  border-bottom: 0.1rem solid rgb(252, 187, 223);
-}
 
-.logo {
-  font-size: 2.5rem;
-  color: var(--txt-color);
-  font-weight: 600;
-  cursor: default;
-}
-.navbar a {
+ }
+ section
+ {
+   min-height: 100vh;
+   padding: 10rem 9% 2rem;
+ }
+ .header
+ {
+    position: fixed;
+    opacity: 0.8;
+   top: 0;
+   left: 0;
+   width:100%;
+   padding:2rem 9%;
+   background-color: var(--bg-color);
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   z-index: 100;
+ }
+ .header.sticky
+ {
+  border-bottom: .1rem solid rgb(252, 187, 223);
+ }
+
+ .logo
+ {
+    font-size: 2.5rem;
+    color: var(--txt-color);
+    font-weight: 600;
+    cursor: default;
+ }
+ .navbar a {
   /* position: relative; */
   font-size: 2rem;
   /* left: 118px; */
@@ -129,11 +135,12 @@ section {
   color: var(--main-color);
 }
 
+
 .navbar a.active,
 .navbar a.active:hover {
   color: var(--main-color);
 }
-.navbar.active {
+  .navbar.active {
   display: block;
 }
 .logoImg {
@@ -178,18 +185,19 @@ section {
 
 /* ---------SLIDER CSS------------------------ */
 
+
 .home {
   width: 100%;
   /* border: 2px solid blue;  */
   padding: 0;
   margin: 0;
   position: relative;
-}
+} 
 .slider {
   margin: 0;
   min-width: 100%;
   /* border: 2px solid red; */
-  min-height: 100vh;
+  min-height: 100vh;  
 }
 
 .slide_viewer {
@@ -198,7 +206,7 @@ section {
   position: relative;
 }
 
-.slide_group {
+.slide_group { 
   height: 100%;
   position: relative;
   width: 500%; /* Updated width to accommodate all slides */
@@ -212,67 +220,76 @@ section {
   background-size: cover;
 }
 
-.home-content {
+.home-content{
   z-index: 1;
   position: absolute;
   top: 30%;
-  left: 25%;
+  left: 25.0%;
   background: rgba(0, 42, 0, 0.441);
   border-radius: 50px;
-  padding: 3vmax 3vmax 3vmax 3vmax;
+  padding: 3vmax 3vmax 3vmax 3vmax; 
   filter: blur(0.8px);
   width: 55%;
   height: 25vmax;
   font-size: 4vmax;
 }
 
+
+
+
 .home-content h3 {
   font-size: 4.2rem;
   font-weight: 700;
 }
 .home-content h3:nth-of-type(2) {
-  margin-right: 5px; /* Adjust margin as needed */
+
+  margin-right:5px; /* Adjust margin as needed */
 }
 
-#menu-icon {
-  font-size: 3.6rem;
-  color: var(--txt-color);
-  display: none;
-}
-
-/* .home
+ #menu-icon
+ {
+    font-size: 3.6rem;
+    color:var(--txt-color);
+    display:none;
+ }
+ 
+ /* .home
  {
    display: grid;
    justify-content: center;
    align-items: center;
    grid-template-columns: 600px 300px;
  } */
-/* .home-img img
+ /* .home-img img
  {
   width: 20vw;
   animation:floatImage 4s ease-in-out infinite;
  } */
 
-@keyframes floatImage {
-  0% {
-    transform: translateY(0);
+ @keyframes floatImage{
+  0%
+  {
+    transform:translateY(0);
   }
-  50% {
-    transform: translateY(-2.4rem);
+  50%
+  {
+    transform:translateY(-2.4rem);
   }
-  100% {
-    transform: translateY(0);
+  100%
+  {
+    transform:translateY(0);
   }
-}
+ }
 
-.home-content h3 {
-  font-size: 4.2rem;
-  font-weight: 700;
-}
-.home-content h3:nth-of-type(2) {
+ .home-content h3
+ {
+   font-size: 4.2rem;
+   font-weight: 700;
+ }
+ .home-content h3:nth-of-type(2)
+ {
   margin-bottom: 2rem;
 }
-
 span {
   color: var(--main-color);
 }
@@ -387,7 +404,7 @@ span {
 
 .about {
   position: relative;
-  height: 100vh;
+  height: 100vh; 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -413,19 +430,19 @@ span {
   object-fit: cover;
 }
 
-.video-overlay {
+.video-overlay{
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0, 0.5);
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color: rgba(0,0,0,0,0.5);
   z-index: 1;
 }
 
-.background-video {
+.background-video{
   filter: contrast(1.5) brightness(1.4);
-  z-index: 0;
+  z-index:0;
 }
 
 .overlay {
@@ -458,7 +475,7 @@ span {
 }
 
 .about-content .heading span {
-  font-size: 7rem;
+  font-size: 7rem; 
 }
 
 .heading {
@@ -485,7 +502,7 @@ span {
 
 @media (max-width: 1024px) {
   .about-content {
-    flex-direction: column;
+    flex-direction: column; 
   }
 
   .about-content .heading {
@@ -493,7 +510,7 @@ span {
   }
 
   .about-content .heading span {
-    font-size: 2.5rem;
+    font-size: 2.5rem; 
   }
 
   .about-content p {
@@ -507,7 +524,7 @@ span {
   }
 
   .about-content .heading span {
-    font-size: 2rem;
+    font-size: 2rem; 
   }
 
   .about-content p {
@@ -521,7 +538,7 @@ span {
   }
 
   .about-content .heading span {
-    font-size: 1.5rem;
+    font-size: 1.5rem; 
   }
 
   .about-content p {
@@ -531,6 +548,17 @@ span {
   .overlay {
     padding: 10px;
   }
+}
+
+.services-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+  margin: 7px;
+  align-self: stretch;
+  flex-basis: 100%;
 }
 
 .services-container .services-box {
@@ -567,11 +595,6 @@ span {
   font-size: 1.6rem;
   margin: 1rem 0 3rem;
 }
-.more-blogs {
-  float: right;
-  font-size: medium;
-  color: white;
-}
 
 .with-blur-backdrop {
   background-color: none;
@@ -607,19 +630,15 @@ span {
   position: relative;
   width: 290px;
   background: linear-gradient(90deg, rgb(31, 102, 31), rgb(231, 231, 121));
-  background: -webkit-linear-gradient(
-    90deg,
-    rgb(31, 102, 31),
-    rgb(231, 231, 121)
-  );
+  background: -webkit-linear-gradient(90deg, rgb(31, 102, 31), rgb(231, 231, 121));
   border-radius: 10px;
   margin: 10px;
   align-self: stretch;
   flex: 1 1 21%;
-  opacity: 1;
+  opacity: 1; 
   cursor: pointer;
-  transform: translateY(0px);
-  transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease;
+  transform: translateY(0px); 
+  transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease; 
 }
 
 .fcard-content {
@@ -628,7 +647,7 @@ span {
 }
 
 .fcard:hover {
-  box-shadow: 2px 2px 10px rgba(185, 185, 106, 0.8);
+  box-shadow: 2px 2px 10px rgba(185, 185, 106, 0.8); 
   transform: scale(1.1);
   -webkit-transform: scale(1.1);
   -ms-transform: scale(1.1);
@@ -710,7 +729,7 @@ a {
   color: rgb(230, 226, 226);
 }
 
-.pos {
+.pos{
   position: relative;
 }
 
@@ -772,6 +791,7 @@ a {
 }
 .portfolio-box h4 {
   font-size: 3rem;
+
 }
 .portfolio-heading {
   position: absolute;
@@ -857,22 +877,26 @@ input[type="number"]::-webkit-inner-spin-button {
   cursor: pointer;
 }
 
-#review-btn {
+#review-btn{
   border: none;
   border-radius: 20px;
-  color: yellowgreen;
+  color:yellowgreen;
   background-color: #053314;
   margin-top: 0;
-  display: block;
+  display: block; 
   margin-top: 10px;
   margin-left: 20px;
   text-decoration: underline;
   font-size: 14px;
+  
+  
+
 }
-#review-btn:hover {
+#review-btn:hover{
   cursor: pointer;
-  box-shadow: 0 4px 6px rgba(183, 253, 6, 0.1);
+  box-shadow: 0 4px 6px rgba(183, 253, 6, 0.1); 
 }
+
 
 /* Modal styles */
 .modal {
@@ -899,6 +923,7 @@ input[type="number"]::-webkit-inner-spin-button {
   width: 70%;
   max-width: 500px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  
 }
 
 .close {
@@ -918,7 +943,7 @@ input[type="number"]::-webkit-inner-spin-button {
   margin-top: 0;
   margin-bottom: 20px;
   text-align: center;
-  color: black;
+  color:black;
   font-size: 20px;
 }
 
@@ -949,7 +974,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .modal-content button[type="submit"] {
-  background-color: #0e4b16;
+  background-color:#0e4b16;
   color: white;
   padding: 12px 20px;
   justify-content: center;
@@ -963,7 +988,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .modal-content button[type="submit"]:hover {
-  background-color: #053314;
+  background-color:#053314;
 }
 
 .modal-content button[type="submit"]:focus {
@@ -982,7 +1007,7 @@ input[type="number"]::-webkit-inner-spin-button {
 /* rating stars */
 .rating {
   width: 180px;
-  margin: auto;
+  margin:auto;
   justify-content: center;
 }
 
@@ -993,6 +1018,7 @@ input[type="number"]::-webkit-inner-spin-button {
   cursor: pointer;
   color: #dabd18b2;
 }
+ 
 
 .footer {
   display: flex;
@@ -1018,12 +1044,12 @@ input[type="number"]::-webkit-inner-spin-button {
   margin-top: 15px;
 }
 
-.footer-title {
+.footer-title{
   font-weight: 500;
   font-size: 20px;
 }
 
-.footer-left {
+.footer-left{
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -1076,9 +1102,12 @@ input[type="number"]::-webkit-inner-spin-button {
   }
 }
 
+
+
+
 @media (max-width: 1216px) {
   .about-content {
-    flex-direction: column;
+    flex-direction: column; 
   }
   .logo {
     font-size: 2.6vmax;
@@ -1139,38 +1168,45 @@ input[type="number"]::-webkit-inner-spin-button {
   } */
   .about {
     font-size: 2rem;
-    margin: 3rem 0;
-  }
-  .home {
-    height: 20vmax;
-    overflow: hidden;
-    background: url(./images/hom2.jpg) center;
-    position: relative;
-    padding: 0;
-  }
-  .slide_viewer {
-    display: none;
-  }
-  .home-content {
-    /* position: fixed;  */
-    top: 30%;
-    left: 18%;
-    filter: blur(0.5px);
-    color: rgb(255, 247, 232);
-    width: 70%;
-    height: fit-content;
-    padding: 4vmax 11vmax 4vmax 2vmax;
-    overflow: hidden;
-  }
-  .home-content h1 {
-    font-size: 5rem;
-  }
-  .home-content h3 {
-    font-size: 3rem;
-    font-weight: 700;
-  }
+    margin: 3rem 0 ;
 
-  .about {
+    
+  } 
+.home{  
+  height: 20vmax;
+  overflow: hidden;
+  background: url(./images/hom2.jpg) center;
+  position: relative;
+  padding: 0;
+}  
+ .slide_viewer {
+  display: none; 
+ } 
+ .home-content{ 
+  /* position: fixed;  */
+  top: 30%;
+  left: 18.0%;
+  filter: blur(0.5px); 
+  color:rgb(255, 247, 232); 
+  width: 70%;
+  height: fit-content;
+  padding: 4vmax 11vmax 4vmax 2vmax;
+  overflow: hidden;
+ 
+}
+.home-content h1
+ {
+   font-size: 5rem; 
+ }
+ .home-content h3
+ {
+   font-size: 3rem;
+   font-weight: 700;
+ }
+
+  .about
+  {
+
     flex-direction: column-reverse;
   }
   .about img {
@@ -1192,6 +1228,8 @@ input[type="number"]::-webkit-inner-spin-button {
   }
 }
 
+
+
 @media (max-width: 617px) {
   /* .home-img img {
     width: 60vw;
@@ -1200,36 +1238,47 @@ input[type="number"]::-webkit-inner-spin-button {
     margin-left: 4vmax;
     height: fit-content;
   } */
-  .about-content p {
+  .about-content p{
     text-align: center;
   }
   .portfolio-container {
     grid-template-columns: 1fr;
     justify-items: center;
   }
-
+  
   .footerUpperPart {
     flex-direction: column-reverse;
-  }
 
-  .home-content {
-    /* position: fixed;  */
-    /* margin-left: -140px;
+  }
+   
+
+
+ .home-content{ 
+  /* position: fixed;  */
+  /* margin-left: -140px;
   margin-top: 15px;   */
-    filter: blur(0.5px);
-    color: rgb(255, 247, 232);
-  }
-  .home-content h1 {
-    font-size: 3.5rem;
-  }
-  .home-content h3 {
-    font-size: 2.2rem;
-    font-weight: 700;
-  }
-  .slide_viewer {
+  filter: blur(0.5px); 
+  color:rgb(255, 247, 232); 
+}
+.home-content h1
+ {
+   font-size: 3.5rem; 
+ }
+ .home-content h3
+ {
+   font-size: 2.2rem;
+   font-weight: 700;
+}
+.slide_viewer {
     display: block; /* Ensure the slide viewer is visible on smaller screens */
   }
 }
+
+
+
+
+
+
 
 @media (max-width: 365px) {
   .home-img {
@@ -1239,25 +1288,30 @@ input[type="number"]::-webkit-inner-spin-button {
     width: 90vw;
   }
 
-  .home-content {
+ 
+  .home-content{ 
     /* position: fixed;  */
     /* margin-left: -190px;
     margin-top: 0px;   */
-    filter: blur(0.5px);
-    color: rgb(255, 247, 232);
+    filter: blur(0.5px); 
+    color:rgb(255, 247, 232); 
   }
-  .home-content h1 {
-    font-size: 2.5rem;
-  }
-  .home-content h3 {
-    font-size: 1.8rem;
-    font-weight: 700;
-  }
+  .home-content h1
+   {
+     font-size: 2.5rem; 
+   }
+   .home-content h3
+   {
+     font-size: 1.8rem;
+     font-weight: 700;
+   }
 
-  .footer {
+  .footer
+  { 
+
     flex-direction: column;
 
-    p {
+    p{
       font-weight: bold;
     }
   }
@@ -1290,7 +1344,9 @@ input[type="number"]::-webkit-inner-spin-button {
   /* margin-left:25px;
  margin-right:25px; */
 
-  font-size: 22px;
+ font-size:22px; 
+ 
+
 }
 .socialIcons a {
   display: grid;
@@ -1315,6 +1371,7 @@ input[type="number"]::-webkit-inner-spin-button {
 .services-box a:hover {
   text-decoration: underline; /* Add underline on hover if needed */
 }
+
 
 /* width */
 ::-webkit-scrollbar {
@@ -1341,15 +1398,17 @@ input[type="number"]::-webkit-inner-spin-button {
   background: rgb(192, 223, 100);
 }
 
+
 .footer {
   padding: 20px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)),
-    url("./images/istockphoto-1465642013-170667a.webp");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url('./images/istockphoto-1465642013-170667a.webp');
   background-size: cover; /* Ensure the background image covers the entire container */
   background-position: center; /* Center the background image */
   background-repeat: no-repeat; /* Prevent the background image from repeating */
   color: #fff;
 }
+
+
 
 .footer-grid {
   display: grid;
@@ -1364,7 +1423,7 @@ input[type="number"]::-webkit-inner-spin-button {
 .footer-iconTop {
   text-align: center;
 }
-.footer-iconTop a {
+.footer-iconTop a{
   display: inline-block;
   width: max-content;
   padding: 0.8rem;
@@ -1375,6 +1434,7 @@ input[type="number"]::-webkit-inner-spin-button {
 .footer-iconTop a:hover {
   box-shadow: 0 0 1rem var(--main-color);
 }
+
 
 .footer-iconTop a i {
   font-size: 2.4rem;
@@ -1394,12 +1454,12 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .quick-links {
-  text-align: center;
-  width: 50vw;
-  padding: 20px;
-  p {
-    font-weight: bold;
-  }
+ text-align: center;
+ width: 50vw;
+ padding: 20px;
+ p{
+  font-weight: bold;
+}
 }
 
 .quick-links h2 {
@@ -1438,14 +1498,15 @@ input[type="number"]::-webkit-inner-spin-button {
   .footer-iconTop {
     order: -1; /* Places these items above the icons in the single column layout */
   }
-  .socialIcons {
-    gap: 0;
+  .socialIcons{
+    gap:0;
     padding: 1rem;
   }
   .quick-links li {
     margin-bottom: 0;
   }
-  .quick-links ul {
+  .quick-links ul{
     flex-direction: column;
   }
 }
+
