--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -827,7 +828,294 @@ a {
   color: var(--second-color);
 }
 
-.contact h2 {
+
+/* Contact */
+
+.contact
+{
+    align-items: center;
+    position: relative;
+    width: 85vw;
+    min-width: auto;
+    margin-top: 15vh;
+    margin-bottom: 30vh;
+    display: flex;
+    z-index: 1000;
+    border-radius: 20px;
+    background-color:#053314;
+    border-radius: 22px;
+    /* background-color: #fff; */
+}
+
+.contact .contactInfo
+{
+
+    top: 0;
+    width: 15vw;
+    height: 550px;
+    position: relative;
+    background: #095a55;
+    z-index: 1;
+    /* padding: 40px; */
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: none;
+    border-radius: 0px;
+}
+.contactInfo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the image covers the entire container */
+}
+
+.contact .contactInfo h2
+{
+    color: #fff;
+    font-size: 50px;
+    font-weight: 500;
+}
+
+.contact .contactInfo ul.info
+{
+    position: relative;
+    margin: 20px 0px ;
+}
+
+.contact .contactInfo ul.info li
+{
+    position: relative;
+    list-style: none;
+    display: flex;
+    margin: 20px 0;
+    cursor: pointer;
+    align-items: flex-start;
+}
+
+.contact .contactInfo ul.info li span:nth-child(1)
+{
+    width: 30px;
+    min-width: 30px;
+}
+
+/* for gmail */
+.contact .contactInfo ul.info li span a
+{
+    color: #fff;
+    text-decoration: none;
+    width: 30px;
+    min-width: 30px;
+}
+
+.contact .contactInfo ul.info li span:nth-child(1) img
+{
+    max-width: 100%;
+    filter: invert(1);
+}
+
+.contact .contactInfo ul.info li span:nth-child(2)
+{
+    color: #fff;
+    margin-left: 10px;
+    font-weight: 300;
+}
+
+.contact .contactInfo ul.sci
+{
+    position: relative;
+    display: flex;
+}
+
+.contact .contactInfo ul.sci li
+{
+    list-style: none;
+    margin-right: 15px;
+}
+
+.contact .contactInfo ul.sci li a
+{
+    text-decoration: none;
+}
+
+.contact .contactInfo ul.sci li a img
+{
+    filter: invert(1);
+}
+
+.contact .contactForm
+{
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif !important;
+    position: relative;
+    width: calc(100% - 350px);
+    padding: 70px 50px;
+    padding-left: 60px;
+    margin-left: 0;
+    height: 550px;
+    background: #8DAB4E;
+    box-shadow: none;
+    border-radius: 0px;
+}
+
+.contact .contactForm h2
+{
+    color: #000000;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.contact .contactForm .formBox
+{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 30px;
+}
+
+.contact .contactForm .formBox .inputBox
+{
+    position: relative;
+    margin-bottom: 35px;
+}
+
+.contact .contactForm .formBox .inputBox.w50
+{
+    width: 47%;
+}
+
+.contact .contactForm .formBox .inputBox.w100
+{
+    width: 100%;
+}
+
+.contact .contactForm .formBox .inputBox input,
+.contact .contactForm .formBox .inputBox textarea
+{
+    width: 100%;
+    resize: none;
+    padding: 5px 0;
+    font-size: 18px;
+    font-weight: 300;
+    color: #333;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #777;
+}
+
+.contact .contactForm .formBox .inputBox textarea
+{
+    height: 120px;
+}
+
+.contact .contactForm .formBox .inputBox span
+{
+    position: absolute;
+    left: 0;
+    padding: 5px 0;
+    pointer-events: none;
+    font-size: 18px;
+    font-weight: 300;
+    transition: 0.3s;
+}
+
+.contact .contactForm .formBox .inputBox input:focus ~ span,
+.contact .contactForm .formBox .inputBox input:valid ~ span,
+.contact .contactForm .formBox .inputBox textarea:focus ~ span,
+.contact .contactForm .formBox .inputBox textarea:valid ~ span
+{
+    transform: translateY(-20px);
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    color: #095a55;
+    font-weight: 500;
+}
+
+/* Css for the submit button */
+.contact .contactForm .formBox .inputBox input[type="submit"]
+{
+    position: relative;
+    cursor: pointer;
+    background: #095a55;
+    border-radius: 20px;
+    color: #fff;
+    border: none;
+    max-width: 150px;
+    padding: 12px;
+}
+
+.contact .contactForm .formBox .inputBox input[type="submit"]:hover
+{
+    background: #0d9480;
+}
+
+.contact .feedback{
+  color: #000;
+}
+
+/* make the form responsive */
+@media (max-width: 991px)
+{
+
+    .contact
+    {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .contact .contactForm
+    {
+        width: 100%;
+        height: auto;
+        border-radius: 0px;
+    }
+
+    .contact .contactInfo
+    {
+        width: 100%;
+        height: auto;
+        flex-direction: row;
+        border-radius: 0px;
+    }
+
+    .contact .contactInfo ul.sci
+    {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media (max-width: 600px)
+{
+    .contact .contactForm
+    {
+        padding: 25px;
+    }
+
+    .contact .contactInfo
+    {
+        padding: 25px;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .contact .contactInfo ul.sci
+    {
+        margin-top: 40px;
+    }
+
+    .contact .contactForm .formBox .inputBox.w50
+    {
+        width: 100%;
+    }
+}
+
+
+
+/* .contact h2 {
   margin-bottom: 3rem;
 }
 
@@ -875,7 +1163,7 @@ input[type="number"]::-webkit-inner-spin-button {
 .contact form .btn {
   margin-top: 2rem;
   cursor: pointer;
-}
+} */
 
 #review-btn{
   border: none;
@@ -1509,4 +1797,3 @@ input[type="number"]::-webkit-inner-spin-button {
     flex-direction: column;
   }
 }
-
