--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
   border: none;
   outline: none;
   scroll-behavior: smooth;
-  font-family: "Playfair Display", serif;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, 'Montserrat';
+  font:'Montserrat';
 }
 
 /* Customizing the title */
